--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: 'Trebuchet MS', sans-serif;
 }
 
 .App-middle{
@@ -22,6 +23,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
+  font-family: 'Trebuchet MS', sans-serif;
 }
 
 .App-bottom{
@@ -33,6 +35,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: 'Trebuchet MS', sans-serif;
 }
 
 .App-link {
